--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <title>404 Bulunamadı! - Jest Medya</title>
-        <link rel="stylesheet" href="css/404.css">
+        <link rel="stylesheet" href="/css/404.css">
     </head>
     <body>
         <div class="noise"></div>
